# recipe_creator

./: .gitignore  README.md  langgraph.json  pyproject.toml  requirements.txt
agent_chat_frontend/: README.md  env.example  package.json
agent_chat_frontend/src/providers/: Stream.tsx
recipe_creator/: __init__.py  agent.py  config.py  langgraph.json  main.py  middlewares.py  requirements.txt
recipe_creator/mcp/: __init__.py  postgres_server.py
recipe_creator/models/: __init__.py  recipe.py  saved_recipe.py
recipe_creator/models/db/: __init__.py  saved_recipe.py
recipe_creator/prompts/: default_prompt.txt  healthy.txt  image_prompt_gen.txt
recipe_creator/services/: __init__.py  cloud_storage.py  image_generation.py
recipe_creator/storage/: __init__.py  database.py  sql_guardrails.py
recipe_creator/tools/: __init__.py  execute_sql.py  recipe_storage.py  save_recipe.py  web_search.py  youtube.py
specs/1-recipe-agent-backend/: data-model.md  impl-plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-recipe-agent-backend/checklists/: requirements.md
specs/1-save-recipes/: data-model.md  impl-plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/3-agent-chat-frontend/: data-model.md  impl-plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/4-prod-deployment-infra/: impl-plan.md  spec.md  tasks.md
specs/4-recipe-storage/: data-model.md  impl-plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/5-backend-deployment/: data-model.md  impl-plan.md  quickstart.md  research.md  spec.md  tasks.md
(+8 files in other folders)
