[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recipe_creator"
version = "0.1.0"
description = "A LangGraph-powered recipe creation agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "pydantic>=2.0",
    "tavily-python>=0.5.0",
    "youtube-transcript-api>=0.6.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0",
    "greenlet>=3.0",
    "psycopg[binary]>=3.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["recipe_creator*"]

