[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recipe_creator"
version = "0.1.0"
description = "A LangGraph-powered recipe creation agent"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["recipe_creator*"]

